# code-agent

./: .gitignore  LICENSE  README.md  README_CN.md  pyproject.toml  指令.txt
.github/workflows/: ci.yml  publish.yml
article/: 00-index.md  00-index_EN.md  01-the-loop.md  01-the-loop_EN.md  02-tools.md  02-tools_EN.md  03-llm-and-cost.md  03-llm-and-cost_EN.md  04-context.md  04-context_EN.md  05-parallel-and-subagents.md  05-parallel-and-subagents_EN.md  06-session-and-cli.md  06-session-and-cli_EN.md  07-build-your-own.md  07-build-your-own_EN.md
corecoder/: __init__.py  __main__.py  agent.py  cli.py  config.py  context.py  llm.py  prompt.py  session.py
corecoder/tools/: __init__.py  agent.py  base.py  bash.py  edit.py  glob_tool.py  grep.py  read.py  write.py
tests/: test_core.py  test_litellm.py  test_session.py  test_tools.py
